Reduce Gradle build warnings